fix styles on firefox, remove commented logs

--- a/website/assets/styles/pages/handbook/basic-handbook.less
+++ b/website/assets/styles/pages/handbook/basic-handbook.less
@@ -87,7 +87,7 @@
   }
 
   [purpose='right-sidebar'] {
-    min-width: fit-content;
+    min-width: max-content;
     max-width: 210px;
     margin: 0px 40px;
     p, a {
